update Readme and refactor code
